--- a/templates/index.html
+++ b/templates/index.html
@@ -15,5 +15,6 @@
       Body: <textarea name="body"></textarea><br />
       <input type="submit" value="Save"/>
     </form>
+    <a href="../">Home</a>
   </body>
 </html>
